--- a/projetoDev/src/main/resources/application.properties
+++ b/projetoDev/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/biblioteca
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=sapopemba111
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
